--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "classfunctionincrdicr",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://harshhcode.github.io/counter-app",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
